# mini_crm_django_old

./: .env.example  .gitignore  AGENTS.md  Makefile  main.py  pyproject.toml  railway.json
base/: settings.py  urls.py
home/: admin.py  filters.py  forms.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
home/business_data_extractor/: extractor.py  yellow_pages_ca.html
home/migrations/: 0001_initial.py
home/static/home/: custom.css  custom.scss
home/static/home/bootstrap/scss/: bootstrap-grid.css  bootstrap-reboot.css  bootstrap-utilities.css  bootstrap.css
home/templates/home/: _navigation.html  base.html  call_records.html  call_records_create.html  home.html  prospects.html  prospects__add_call.html  prospects_import_excel.html  upload_csv_business_data_form.html
home/templates/home/htmx/: test.html
home/tests/: tests.py
